--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "pack": "npm run build-all && electron-builder",
         "dist": "npm run build-all && electron-builder --publish=never",
         "dist-win": "npm run build-all && electron-builder --win",
+        "dist-portable": "npm run build-all && electron-builder --portable",
         "clean": "if exist dist rmdir /s /q dist"
     },
     "devDependencies": {
