Actual MVP Quiz app
Added all the questions I could find in the questions.json.
Added a category selector.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "win": {
             "target": [
                 {
-                    "target": "nsis",
+                    "target": "portable",
                     "arch": ["x64"]
                 }
             ],
